--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <title>Diagnostico - PokeAPI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body onload="getPokemonList()">
     <div class="container">
         <div class="row">
-            <div class="col-12 mt-3">
                 <div id="pokeList"></div>
-            </div>
         </div>
     </div>
     <script src="./index.js"></script>
