--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diagnostico - PokeAPI</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body onload="getPokemonList()">
     <div class="container">
         <div class="row">
-                <div id="pokeList"></div>
+            <div id="pokeList"></div>
+            <div class="col-6 mt-3">
+                <button id="prev" class="btn btn-info">Anterior</button>
+            </div>
+            <div class="col-6 mt-3 d-flex flex-row-reverse">
+                <button id="next" class="btn btn-info">Siguiente</button>
+            </div>
         </div>
     </div>
     <script src="./index.js"></script>
 </body>
+
 </html>
